Issue 647 - https://github.com/eclipse-jdt/eclipse.jdt.core/issues/647 - (#652)
* Issue 647 - https://github.com/eclipse-jdt/eclipse.jdt.core/issues/647 -
Local variable referenced from guard not effectively final

* Removing Xvnc
Note that the above removal was done by Sravan to reduce the chance of timeout issues while running the tests and doesn't affect the fix in any way

Co-authored-by: Sravan Kumar Lakkimsetti <sravakumarl@in.ibm.com>